- Frame Refatorado para utilizar o Board. - Correção em Frame. CreateAllPossibilities funcionando corretamente. - Testes de criação de várias possibilidades a partir de um board inicial